# LimeWall-Gallery

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  README.ru.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: gallery-validate.yml
apps/ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/ui/src/: main.ts  styles.css
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/capabilities/: default.json
apps/ui/src-tauri/icons/: icon.icns
apps/ui/src-tauri/src/: assoc.rs  daemon_client.rs  diagnostics.rs  gallery.rs  lib.rs  library.rs
assets/web/demo/: index.html
assets/web/viewer/: viewer.template.html
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs  transport.rs
crates/mpv/: Cargo.toml
crates/mpv/examples/: sw_render_spike.rs
crates/mpv/src/: ffi.rs  lib.rs
crates/platform/: Cargo.toml
crates/platform/examples/: display_mode.rs
crates/platform/src/: autostart_win32.rs  harden_win32.rs  lib.rs  resources.rs  resources_win32.rs  stdio_win32.rs  tray.rs  tray_win32.rs  watcher.rs  watcher_win32.rs  win32.rs
crates/renderer/: Cargo.toml  build.rs
crates/renderer/src/: daemon.rs  lib.rs  main.rs  playback.rs  playlist.rs
crates/wpk/: Cargo.toml
crates/wpk/src/: lib.rs
docs/: third-party.md
docs/comparisons/: 2026-07-10-win10-1080p.md  README.md
docs/research/: ffmpeg-import.md  libmpv.md  phase2-architecture.md  phase3-politeness.md  phase6-web.md  renderer-sandbox-phase2.md  renderer-sandbox.md  security-model.md  workerw.md  workshop.md
docs/testing/: phase1-acceptance.md
gallery/: README.md  build-catalog.mjs  catalog.json  keygen.mjs  pubkey.ed25519  revocation.json  sign-catalog.mjs  validate.mjs  verify-downloads.mjs  verify-signature.mjs
gallery/packs/aurora-drift/: aurora-drift.wpk  tags.json
gallery/packs/ember-haze/: ember-haze.wpk  tags.json
gallery/packs/nebula-drift/: nebula-drift.wpk  tags.json
licenses/: THIRD-PARTY-NOTICES.md
packaging/: README-portable.txt  beta-welcome-issue.md
scripts/: build-portable.ps1  fetch-ffmpeg.ps1  fetch-libmpv.ps1  fetch-licenses.ps1  generate-upscale-test-chart.ps1
