[workspace]
resolver = "2"
members = ["crates/ipc", "crates/mpv", "crates/platform", "crates/renderer", "crates/wpk"]
# The Tauri app builds in its own workspace: pulling the whole Tauri stack
# into every `cargo build --workspace` would slow the core loop down.
exclude = ["apps/ui/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
interprocess = { version = "2.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
strip = true
