[package]
name = "platform"
description = "Platform abstraction: wallpaper surfaces behind desktop icons"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
