[package]
name = "platform"
description = "Platform abstraction: wallpaper surfaces behind desktop icons"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
wry = "0.55"
raw-window-handle = "0.6"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
