[package]
name = "renderer"
description = "LiveWall wallpaper renderer daemon and CLI"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc = "3"
ipc = { path = "../ipc" }
mpv = { path = "../mpv" }
platform = { path = "../platform" }
