[package]
name = "renderer"
description = "LimeWall wallpaper renderer daemon and CLI"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc = "3"
dirs = "6"
ipc = { path = "../ipc" }
mpv = { path = "../mpv" }
platform = { path = "../platform" }
wpk = { path = "../wpk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
