[package]
name = "wpk"
description = "LiveWall wallpaper package (.wpk): zip container with a manifest"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
