[package]
name = "ui"
description = "LimeWall control UI"
version = "0.1.0-beta"
edition = "2024"
publish = false

[lib]
# The `_lib` suffix avoids a name clash with the `ui` binary on Windows.
name = "ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ipc = { path = "../../../crates/ipc" }
wpk = { path = "../../../crates/wpk" }
platform = { path = "../../../crates/platform" }
base64 = "0.22"
dirs = "6"
sha2 = "0.10"
# Ed25519 verification of the gallery catalog signature. Already in the tree via
# ureq/rustls, so this pins the same build rather than adding a new crypto stack.
ring = "0.17"
ureq = "2"
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.5"

[dev-dependencies]
tempfile = "3"
